--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".ProfileActivity"
-            android:label="@string/title_activity_profile"></activity>
+        <activity android:name=".ProfileActivity"
+            android:label="@string/title_profile"/>
         <activity android:name=".HomeActivity"
+            android:label="@string/title_home"
             android:screenOrientation="portrait"/>
         <activity android:name=".RegisActivity"
-            android:screenOrientation="portrait"/>
-        <activity android:name=".MainActivity">
+            android:screenOrientation="portrait"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/NoAppTheme"
+            android:fitsSystemWindows="true"/>
+        <activity android:name=".MainActivity"
+            android:theme="@style/NoAppTheme"
+            android:fitsSystemWindows="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
